[gd_scene load_steps=61 format=3 uid="uid://v68rubr571l"]

[ext_resource type="Texture2D" uid="uid://bntaopptrds6i" path="res://Main_Areas/Title/Space Background(1).png" id="1_uu0sr"]
[ext_resource type="Texture2D" uid="uid://cw6d4uhbfttth" path="res://Main_Areas/Title/Space Background(2).png" id="2_fki7b"]
[ext_resource type="Texture2D" uid="uid://c77osvw1ckdqw" path="res://Main_Areas/Title/Space Background(4).png" id="2_rrrvo"]
[ext_resource type="Texture2D" uid="uid://cw8kpxsf6f801" path="res://Main_Areas/Title/53721020.png" id="2_x7ev4"]
[ext_resource type="Script" path="res://Main_Areas/Title/title.gd" id="3_a787a"]
[ext_resource type="PackedScene" uid="uid://pmqkwyfmea3m" path="res://UI/temp_level_select.tscn" id="6_pk7ou"]
[ext_resource type="AudioStream" uid="uid://kx8lr636i5dx" path="res://UI/Music/Chasing Shadows in Space.mp3" id="8_704li"]
[ext_resource type="PackedScene" uid="uid://db6nsiuqoytme" path="res://UI/Settings/Settings.tscn" id="8_fnm3i"]
[ext_resource type="Script" path="res://Scripts/saver_loader.gd" id="9_dcftg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hkuu2"]
atlas = ExtResource("2_x7ev4")
region = Rect2(0, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckl2k"]
atlas = ExtResource("2_x7ev4")
region = Rect2(240, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm4ch"]
atlas = ExtResource("2_x7ev4")
region = Rect2(480, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_cemq1"]
atlas = ExtResource("2_x7ev4")
region = Rect2(720, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ct6"]
atlas = ExtResource("2_x7ev4")
region = Rect2(960, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsy4h"]
atlas = ExtResource("2_x7ev4")
region = Rect2(1200, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr52m"]
atlas = ExtResource("2_x7ev4")
region = Rect2(1440, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uip3"]
atlas = ExtResource("2_x7ev4")
region = Rect2(1680, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_lylb5"]
atlas = ExtResource("2_x7ev4")
region = Rect2(1920, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0i1g"]
atlas = ExtResource("2_x7ev4")
region = Rect2(2160, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3pt1"]
atlas = ExtResource("2_x7ev4")
region = Rect2(2400, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_s52nn"]
atlas = ExtResource("2_x7ev4")
region = Rect2(2640, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo0vb"]
atlas = ExtResource("2_x7ev4")
region = Rect2(2880, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_slbu7"]
atlas = ExtResource("2_x7ev4")
region = Rect2(3120, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_13pdb"]
atlas = ExtResource("2_x7ev4")
region = Rect2(3360, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_diot5"]
atlas = ExtResource("2_x7ev4")
region = Rect2(3600, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_2il2b"]
atlas = ExtResource("2_x7ev4")
region = Rect2(3840, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlfep"]
atlas = ExtResource("2_x7ev4")
region = Rect2(4080, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qx75"]
atlas = ExtResource("2_x7ev4")
region = Rect2(4320, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbhp3"]
atlas = ExtResource("2_x7ev4")
region = Rect2(4560, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfab1"]
atlas = ExtResource("2_x7ev4")
region = Rect2(4800, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfj23"]
atlas = ExtResource("2_x7ev4")
region = Rect2(5040, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_skhq2"]
atlas = ExtResource("2_x7ev4")
region = Rect2(5280, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_dojf0"]
atlas = ExtResource("2_x7ev4")
region = Rect2(5520, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_11bpr"]
atlas = ExtResource("2_x7ev4")
region = Rect2(5760, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwjvc"]
atlas = ExtResource("2_x7ev4")
region = Rect2(6000, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_pspgn"]
atlas = ExtResource("2_x7ev4")
region = Rect2(6240, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj0c2"]
atlas = ExtResource("2_x7ev4")
region = Rect2(6480, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_se5fb"]
atlas = ExtResource("2_x7ev4")
region = Rect2(6720, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_blrap"]
atlas = ExtResource("2_x7ev4")
region = Rect2(6960, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ep1m"]
atlas = ExtResource("2_x7ev4")
region = Rect2(7200, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a3ap"]
atlas = ExtResource("2_x7ev4")
region = Rect2(7440, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs7v8"]
atlas = ExtResource("2_x7ev4")
region = Rect2(7680, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_eobhs"]
atlas = ExtResource("2_x7ev4")
region = Rect2(7920, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a4rq"]
atlas = ExtResource("2_x7ev4")
region = Rect2(8160, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfhxm"]
atlas = ExtResource("2_x7ev4")
region = Rect2(8400, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi5ur"]
atlas = ExtResource("2_x7ev4")
region = Rect2(8640, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6tef"]
atlas = ExtResource("2_x7ev4")
region = Rect2(8880, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_p54a6"]
atlas = ExtResource("2_x7ev4")
region = Rect2(9120, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei0ng"]
atlas = ExtResource("2_x7ev4")
region = Rect2(9360, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7jr5"]
atlas = ExtResource("2_x7ev4")
region = Rect2(9600, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lhyl"]
atlas = ExtResource("2_x7ev4")
region = Rect2(9840, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttowh"]
atlas = ExtResource("2_x7ev4")
region = Rect2(10080, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxvqa"]
atlas = ExtResource("2_x7ev4")
region = Rect2(10320, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_uunw3"]
atlas = ExtResource("2_x7ev4")
region = Rect2(10560, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_hanq5"]
atlas = ExtResource("2_x7ev4")
region = Rect2(10800, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bjw3"]
atlas = ExtResource("2_x7ev4")
region = Rect2(11040, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0mfm"]
atlas = ExtResource("2_x7ev4")
region = Rect2(11280, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxrpq"]
atlas = ExtResource("2_x7ev4")
region = Rect2(11520, 0, 240, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx10s"]
atlas = ExtResource("2_x7ev4")
region = Rect2(11760, 0, 240, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_83cbb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkuu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckl2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm4ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cemq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ct6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsy4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr52m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uip3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lylb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0i1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3pt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s52nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo0vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slbu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13pdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diot5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2il2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlfep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qx75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbhp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfab1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfj23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skhq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dojf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11bpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwjvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pspgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj0c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se5fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blrap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ep1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a3ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs7v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eobhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a4rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfhxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi5ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6tef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p54a6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei0ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7jr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lhyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttowh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxvqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uunw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hanq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bjw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0mfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxrpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx10s")
}],
"loop": true,
"name": &"Speen",
"speed": 100.0
}]

[node name="TitleScreen" type="Node2D"]

[node name="Sprites" type="CanvasGroup" parent="."]

[node name="Planet" type="AnimatedSprite2D" parent="Sprites"]
z_index = 5
texture_filter = 1
position = Vector2(242, 422)
scale = Vector2(2.52367, 2.469)
sprite_frames = SubResource("SpriteFrames_83cbb")
animation = &"Speen"
autoplay = "Speen"
frame_progress = 0.389911
speed_scale = 0.1

[node name="BGPlanets" type="Sprite2D" parent="Sprites"]
z_index = 2
position = Vector2(924, 132)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_rrrvo")

[node name="Stars" type="Sprite2D" parent="Sprites"]
z_index = 1
position = Vector2(644, 256)
scale = Vector2(1.01714, 1.01805)
texture = ExtResource("2_fki7b")

[node name="BG" type="Sprite2D" parent="Sprites"]
position = Vector2(586, 361)
scale = Vector2(1.11385, 1.03135)
texture = ExtResource("1_uu0sr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 848.0
offset_top = 413.0
offset_right = 1171.0
offset_bottom = 662.0
script = ExtResource("3_a787a")

[node name="Start" type="Button" parent="Control"]
z_index = 10
texture_filter = 1
layout_mode = 0
offset_left = 115.0
offset_top = -115.0
offset_right = 211.0
offset_bottom = -84.0
scale = Vector2(1.7, 1.7)
text = "Start Game"

[node name="Options" type="Button" parent="Control"]
z_index = 10
texture_filter = 1
layout_mode = 0
offset_left = 115.0
offset_top = 20.0
offset_right = 211.0
offset_bottom = 51.0
scale = Vector2(1.7, 1.7)
text = "Options
"

[node name="Quit" type="Button" parent="Control"]
z_index = 10
texture_filter = 1
layout_mode = 0
offset_left = 113.0
offset_top = 120.0
offset_right = 209.0
offset_bottom = 151.0
scale = Vector2(1.7, 1.7)
text = "Exit Game"

[node name="TempLevelSelect" parent="Control" instance=ExtResource("6_pk7ou")]
visible = false
z_index = 10
offset_left = 189.0
offset_top = -33.0
offset_right = 189.0
offset_bottom = -33.0

[node name="Settings" parent="Control" instance=ExtResource("8_fnm3i")]
visible = false
z_index = 10
layout_mode = 1
offset_left = -383.0
offset_top = -184.0
offset_right = -383.0
offset_bottom = -184.0

[node name="LoadGame" type="Button" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 115.0
offset_top = -50.0
offset_right = 211.0
offset_bottom = -19.0
scale = Vector2(1.7, 1.7)
text = "Load Game"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_704li")
autoplay = true
bus = &"Music"

[node name="Utilities" type="Node" parent="."]

[node name="SaverLoader" type="Node" parent="Utilities"]
unique_name_in_owner = true
script = ExtResource("9_dcftg")

[connection signal="pressed" from="Control/Start" to="Control" method="_on_start_pressed"]
[connection signal="pressed" from="Control/Options" to="Control" method="_on_options_pressed"]
[connection signal="pressed" from="Control/Quit" to="Control" method="_on_quit_pressed"]
[connection signal="back_pressed" from="Control/TempLevelSelect" to="Control" method="_on_temp_level_select_back_pressed"]
[connection signal="multUI_pressed" from="Control/TempLevelSelect" to="Control" method="_on_temp_level_select_mult_ui_pressed"]
[connection signal="backButton" from="Control/Settings" to="Control" method="_on_settings_back_button"]
[connection signal="pressed" from="Control/LoadGame" to="Control" method="_on_load_game_pressed"]
